2010-06-09  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Failed at http://philip.html5.org/tests/canvas/suite/tests/2d.path.arcTo.transformation.html
        https://bugs.webkit.org/show_bug.cgi?id=38598

        Remove canvas/philip/tests/2d.path.arcTo.scale.html, canvas/philip/tests/2d.path.arcTo.transformation.html
        and canvas/philip/tests/2d.path.transformation.changing.html from Skipped.

        * platform/qt/Skipped:
2010-06-09  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Failed at http://philip.html5.org/tests/canvas/suite/tests/2d.path.arcTo.transformation.html
        https://bugs.webkit.org/show_bug.cgi?id=38598

        In path transform function handle path only have moveElement case.

        * platform/graphics/qt/PathQt.cpp:
        (WebCore::Path::transform):

Canonical link: https://commits.webkit.org/51948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60933 268f45cc-cd09-0410-ab3c-d52691b4dbfc